update google api

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "apiKey": "AIzaSyBw48pYn-PdTQ6s3raxUjZjefROaNjKIpU",
-  "databaseURL": "https://careful-emitter-233015.firebaseio.com",
+  "apiKey": " AIzaSyASVbVgFqSNgLK-7ruORx4umaHM-tQphy4 ",
+  "databaseURL": "https://reblaze-project.firebaseio.com",
   "urlPlaces": "https://maps.googleapis.com/maps/api/place/nearbysearch/json?radius=2000&type=restaurant",
   "url_photos": "https://maps.googleapis.com/maps/api/place/photo?maxwidth=400"
 }
